# damiao4310_ros2_control

./: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
config/: damiao_controllers.yaml
include/damiao_ros2_control/: damiao.h  damiao_system.hpp
launch/: damiao_control.launch.py
src/: damiao_system.cpp
urdf/: damiao_motor.urdf  damiao_motor.urdf.xacro  link_1.STL
